
 - The compiler now recognizes access to sealed slots when the associated classes
   have already been defined and the type of arguments to the accessors is known
   (either by some explicit declaration or by induction). For low safety or large
   speed settings, this leads to inline access to such slots using the precomputed
   location.

 - ECL now ships with version 1.118 of ASDF.

* Bugs fixed:

 - Intel/64bits running a 32 bits operating system caused a wrong choice of
   assembler code.

 - ASDF:MAKE-BUILD now handles better the case of a monolithic FASL that
   has to include a number of other subsystems.

 - We introduce a new operation, ASDF:LOAD-FASL-OP, which does the job of
   ASDF:LOAD-OP but using a single FASL file per system, thus saving
   resources and allowing easier redistribution of libraries.

 - The bignums produced by RANDOM did not have enough random bits.

 - ECL formerly accepted spaces between the comma and the @ and . characters
   in expressions like ,@ or ,.

 - Building a statically linked ECL works again.

 - Equal random states now compare properly under EQUALP and their hash keys
   are also equal.

 - Problems in the use of "volatile" keywords prevented ECL from compiling
   with a C++ compiler.

 - The reader function for #\ was not suitable for being invoked by the
   user on an arbitrary stream.

 - ECL tried to use intel-64bits assembler on 64 bits processors, even when
   compiler and the operating system work with 32bits.

 - The compiler now inlines and optimizes (FUNCALL (X ..) ... ) where X is a
   macro that returns a lambda form.

 - ECL no longer needs library definition files ecl.def and ecl-threads.def
   thanks to a more clever use of declarations __declspec(dllexport) and
   __declspec(dllimport).

 - We no longer use the flag --rpath when building ECL. Given the fact that
   ECL now assumes a standard Unix filesystem structure, this should pose no