@@ -46,7 +46,7 @@ Returns, as a string, the location of the machine on which ECL runs."
 (defun lisp-implementation-version ()
   "Args:()
 Returns the version of your ECL as a string."
-  "@PACKAGE_VERSION@ (CVS 2008-06-04 22:12)")
+  "@PACKAGE_VERSION@ (CVS 2008-06-04 23:07)")
 
 (defun machine-type ()
   "Args: ()
